@@ -1,3 +1,7 @@
+2020-04-17  Mark Wielaard  <mark@klomp.org>
+
+	* readelf.c (print_debug): Check .gnu.debuglto_ prefix.
+
 2020-04-16  Mark Wielaard  <mark@klomp.org>
 
 	* elflint.c (check_sections): Mask out SHF_EXCLUDE from processor
